--- a/.github/workflows/main_lab-agh-test.yml
+++ b/.github/workflows/main_lab-agh-test.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - lab-agh-test
+name: Build and deploy ASP.Net Core app to Azure Web App - lab-agh-test (staging)
 
 on:
   push:
@@ -24,6 +24,9 @@ jobs:
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
+      
+    - name: Run tests
+      run: dotnet test
 
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
@@ -38,7 +41,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'production'
+      name: 'staging'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -52,6 +55,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'lab-agh-test'
-        slot-name: 'production'
+        slot-name: 'staging'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_7bf49500599f4b699d7dcc620d724ad6 }}
         package: .
